--- a/configs/default.yaml.example
+++ b/configs/default.yaml.example
@@ -11,6 +11,7 @@ app:
 auth:
   type: "oidc"  # Options: mock, oidc
   mock:
+    silent_login: false # Simulate silent logins with auth broker
     groups: []
   oidc:
     client_id: ""  # OIDC_CLIENT_ID
