chore: sets up docker compose for local dev

--- a/.gitignore
+++ b/.gitignore
@@ -474,3 +474,4 @@ portal/libs/middleware/authorizationImpl.js
 portal/libs/middleware/authorizationImpl.test.js
 
 account_mappings.yaml
+ca-bundle.crt
