feat: add granular feature flags for compliance navigation, routes and dashboard metrics
Replace the single boolean features.compliance flag with a structured
object supporting per-section toggles for overview items, individual
policies, and ALB metrics. Navigation, route registration, compliance
overview stats, and homepage dashboard metrics all now respect the
feature flags from configuration.

--- a/configs/default.yaml.example
+++ b/configs/default.yaml.example
@@ -66,7 +66,24 @@ monitoring:
 # Feature Flags
 features:
   auth: false
-  compliance: true
+  compliance:
+    enabled: true
+    overview:
+      tenants: false
+      teams: false
+      loadbalancers: false
+    policies:
+      tagging: false
+      loadbalancers: true
+      albs: false
+      database: false
+      kms: false
+      autoscaling: false
+      decommissioning: false
+      containers: false
+      monitoring: false
+      amis: false
+      agents: false
 
 # Development Settings
 development:
