--- a/.releaserc.json
+++ b/.releaserc.json
@@ -20,9 +20,16 @@
       }
     ],
     [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false,
+        "pkgRoot": "portal"
+      }
+    ],
+    [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md"],
+        "assets": ["CHANGELOG.md", "portal/package.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
